fix: spacing on emphasized columns

--- a/us/en/skymiles/blocks/columns/columns.css
+++ b/us/en/skymiles/blocks/columns/columns.css
@@ -33,6 +33,7 @@
     display: block;
     width: 85%;
     margin: 0 auto;
+    gap: 0;
 }
 
 .columns.emphasized > div > div {
@@ -81,7 +82,7 @@
 
     .columns > div {
         display: flex;
-        align-items: flex-start;
+        align-items: stretch;
         flex-direction: unset;
         gap: 2rem;
     }
@@ -89,7 +90,6 @@
     .columns > div > div {
         flex: 1;
         margin-bottom: 1rem;
-        align-self: flex-start;
     }
 }
 
@@ -106,6 +106,7 @@
     .columns.emphasized > div > div:last-child {
         text-align: left;
         flex-basis: 25%;
+        margin-bottom: 0;
     }
 
     .columns.emphasized > div > div > p {
